2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditor.wrl:
	* movie.avi:
	* ComposedCubeMapTexture.wrl:
	* ComposedCubeMapMovieTexture.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-09-29  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Rotor.wrl:
	* OutlineEditor.wrl: 

2013-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Water1.wrl:
	* Water2.wrl:
	* ElapsedTime.wrl:
	* ElapsedTime.wrl:
	* RoundedRectangle2D.wrl:
	* lostvalley_up.png: 

2013-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Water1.wrl:
	* ElapsedTime.wrl:
	* OutlineEditor.wrl: 

2013-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-09-27  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-09-26  Holger Seelig  <holger.seelig@yahoo.de>

	* KeySensor.wrl: 

2013-09-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Grid.wrl:
	* Rotor.wrl:
	* OutlineEditor.wrl:
	* TransformHandle.wrl: 

2013-09-25  Holger Seelig  <holger.seelig@yahoo.de>

	* bicman.wrl:
	* bic-wegweiser.T.wrl:
	* bic-musterbuero.wrl: 

2013-09-25  Holger Seelig  <holger.seelig@yahoo.de>

	* bicman.wrl:
	* OutlineEditor.wrl:
	* bic-wegweiser.T.wrl: 

2013-09-25  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 
