@@ -105,7 +105,7 @@ DEF Rotor Rotor {
 
 DEF Box Transform {
   translation 1.40843 1.10727 0.193803
-  rotation 0 0 1 4.31117
+  rotation 0 0 1 3.43921
   scale 0.2 0.2 0.2
   children Transform {
     children Shape {
