@@ -1,6 +1,7 @@
 #VRML V2.0 utf8 Titania
 
 PROTO Rotor [
+  exposedField SFNode     metadata MetadataString { }
   exposedField SFBool     enabled TRUE
   exposedField SFTime     cycleInterval 1
   exposedField SFVec3f    axis 0 0 1
