@@ -116,6 +116,11 @@ protected:
 	setLoadState (LoadState value)
 	{ loadState = value; }
 
+	///  @name Operations
+	
+	void
+	disableEvents ();
+
 	///  @name Destruction
 
 	virtual
