@@ -1,5 +1,11 @@
 2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ExternProto.cpp:
+	* X3DUrlObject.h:
+	* X3DUrlObject.cpp: 
+
+2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DBaseNode.cpp: 
 
 2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>
