@@ -1,5 +1,10 @@
 2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Rotor.wrl:
+	* OutlineEditor.wrl: 
+
+2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineEditor.wrl: 
 
 2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>
